--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "prettier": "3.1.1",
+    "typescript": "5.5.2",
     "tsx": "^4.7.1"
   }
 }
