--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "prettier": "3.3.3",
+    "@biomejs/biome": "1.9.0",
     "typescript": "5.5.2",
     "tsx": "^4.7.1"
   }
