--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts"
   },
-  "packageManager": "pnpm@9.15.5",
+  "packageManager": "pnpm@10.2.0",
   "dependencies": {
     "@discordjs-japan/om-syrinx": "github:discordjs-japan/om-syrinx#semver:0.4.1",
     "@hono/node-server": "^1.11.1",
@@ -23,9 +23,17 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
     "@biomejs/biome": "1.9.4",
-    "typescript": "5.5.2",
-    "tsx": "^4.7.1"
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
+    "typescript": "5.5.2"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@discordjs-japan/om-syrinx",
+      "esbuild",
+      "ffmpeg-static"
+    ]
   }
 }
