--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
-auto-install-peers=true
-save-exact=true
 engine-strict=true
+strict-dep-builds=true
+save-exact=true
+auto-install-peers=true
+verify-deps-before-run=install
 use-node-version=20.15.0
